# mychatting

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessage.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessage.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/test_json/: test_json  test_json.cpp
test/test_muduo/: CMakeLists.txt  muduo_server.cpp
test/test_muduo/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exe
